Updated to 0.0.1-eta from 0.0.1-zeta.
Removed useless native operators that will be replaced in the future. Added two loggers: JSON and MD.